<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_two_func_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hanlyjiang.learnandroid.solr.request.TwoFuncTestActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_display_board"
        style="@style/TextAppearance.AppCompat.Caption"
        android:text="@string/url_init"
        android:textIsSelectable="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/tv_display_board">

        <Button
            android:id="@+id/btn_get_admin_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_admin_by_coordinate" />

        <Button
            android:id="@+id/btn_get_excel_file_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_excel_file_url" />
    </LinearLayout>

</RelativeLayout>
