<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.hanlyjiang.learnandroid.android.fragment.FragmentNestedActivity"
    android:background="@color/white">


    <RadioGroup
        android:id="@+id/rgp_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:checkedButton="@+id/rb_message"
        android:gravity="center"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_message"
            style="@style/RadioButton.Selectable.WithIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message" />

        <RadioButton
            android:id="@+id/rb_contact"
            style="@style/RadioButton.Selectable.WithIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactors" />

        <RadioButton
            android:id="@+id/rb_status"
            style="@style/RadioButton.Selectable.WithIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/fl_fragment_stub"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
